# InputPowertools

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python-test-build.yml
InputPowertools/: Input.py  Mode.py  __init__.py  cli.py  default_config.py  input.py
example/: main.py
examples/: cli.py  example 1.py  example 2.py
src/InputPowertools/: cli.py
tests/: main.py
