[metadata]
name = InputPowertools
version = 1.0.0
author = MAA28
author_email = malteaschenbach@gmail.com
description = Kind of like a non intrusive addon for the standard input()
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/InputPowertools
project_urls =
    Bug Tracker = https://github.com/pypa/InputPowertools/issues
    Authors Website = ma28.onthewifi.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src